objects/College__c.object
<CustomObject>
    <fields>
        <fullName>College_Name__c</fullName>
        <label>College Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone_No__c</fullName>
        <label>Phone No</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Karnataka</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>MP</fullName>
                </value>
                <value>
                    <fullName>Kerala</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>College</label>
    <nameField>
        <label>College Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Colleges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>